--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:navigationIcon="@drawable/ic_baseline_menu_24"
-            app:title="Navigation"
+            app:title="ArogyaSetu"
             app:titleTextColor="@color/black">
 
             <de.hdodenhof.circleimageview.CircleImageView
